# mcp_research

./: README.md
mcp_intro/github_workflows/: DEVELOPMENT.md  EPIC_UPDATE_README.md  README.md  TESTING.md  epic_summary_generator.py  main.py  pyproject.toml  setup_github_token.py
mcp_intro/github_workflows/data/: sample.parquet
mcp_intro/github_workflows/example/: README.md  base_example.py  crawling_examples.py  direct_api_examples.py  epic_updates.py  epic_updates_public.py  main_runner.py  report_examples.py
mcp_intro/github_workflows/github_mcp/: __init__.py
mcp_intro/github_workflows/github_mcp/tools/: csv_tools.py  github_tools.py  parquet_tools.py  reporting_tools.py
mcp_intro/github_workflows/reports/: test_report.json  test_report_2.json
mcp_intro/github_workflows/reports/2025-08/2025-08-07/: epic_report.json  epic_summary.md
mcp_intro/github_workflows/tests/: test_github_setup.py  test_github_tools.py
mcp_intro/mix_server/: README.md  pyproject.toml
mcp_intro/mix_server/github_mcp/: __init__.py
mcp_intro/mix_server/github_mcp/tools/: csv_tools.py  parquet_tools.py
mcp_intro/mix_server/github_mcp/utils/: file_reader.py
